added posgres db container config; added redis container config as a cache; added alembic for migrations managing; implemented database (via SQLAlchemy) and cache interaction support: 'database', 'dependancy', 'cache', 'repository', 'service'; updated handlers to support new functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,76 @@
-.vscode
-.venv
-.idea
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.local*
-*.temp*
+*.py[cod]
+*$py.class
+*.pyc
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+#  Usually these files are written by a package manager (e.g. pip)
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Environments
+.venv
+.local.env
+
+# IDEs
+.vscode
+.idea
+
+# macOS files
+.DS_Store
+
+# Windows files
+Thumbs.db
+
+# Ignore Poetry cache
+.cache/
+
+# Temp
+*temp*
+
+# local database files
+*.sqlite3
+*.sqlite
