--- a/.prod.env
+++ b/.prod.env
@@ -1,2 +1,7 @@
-GOOGLE_TOKEN_ID=
 DATABASE_URL=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+YANDEX_CLIENT_ID=
+YANDEX_CLIENT_SECRET=
+YANDEX_REDIRECT_URI=
